# da-fastapi

./: README.md  config.py  main.py  pyproject.toml
models/: requests.py  responses.py
routers/: aggregate.py  schema.py  stats.py  upload.py
services/: query_builder.py  serializer.py  store.py
tests/: test_aggregate.py  test_stats.py  test_upload.py
